--- a/templates/_proxy.erb
+++ b/templates/_proxy.erb
@@ -1,7 +1,4 @@
  --bind-address=<%= scope['kubernetes::node::kube_proxy::bind_address'] -%>
-<% unless [nil, :undefined, :undef, ''].include?(scope.lookupvar('kubernetes::node::kube_proxy::cleanup_iptables')) -%>
- --cleanup-iptables=<%= scope['kubernetes::node::kube_proxy::cleanup_iptables'] -%>
-<% end -%>
 <% if @cluster_cidr -%>
  --cluster-cidr=<%= scope['kubernetes::node::kube_proxy::cluster_cidr'] -%>
 <% end -%>
@@ -43,6 +40,7 @@
 <% if @kube_api_qps -%>
  --kube-api-qps=<%= scope['kubernetes::node::kube_proxy::kube_api_qps'] -%>
 <% end -%>
+ --config=<%= scope['kubernetes::node::kube_proxy::config'] -%>
 <% if @kubeconfig -%>
  --kubeconfig=<%= scope['kubernetes::node::kube_proxy::kubeconfig'] -%>
 <% end -%>
