--- a/templates/_controller-manager.erb
+++ b/templates/_controller-manager.erb
@@ -83,10 +83,10 @@
  --leader-elect-retry-period=<%= scope['kubernetes::master::controller_manager::leader_elect_retry_period'] -%>
 <% end -%>
 <% if @log_dir -%>
- --log-dir=<%= scope['kubernetes::master::controller_manager::log_dir'] -%>
+ --log-dir=<%= @log_dir -%>
 <% end -%>
 <% if @log_file -%>
- --log-file=<%= scope['kubernetes::master::controller_manager::log_file'] -%>
+ --log-file=<%= @log_file -%>
 <% end -%>
 <% unless [nil, :undefined, :undef, ''].include?(scope.lookupvar('kubernetes::master::controller_manager::logtostderr')) -%>
  --logtostderr=<%= scope['kubernetes::master::controller_manager::logtostderr'] -%>
